create basic form (style still looking like Kraut und Rüben), update all footers/navbars

--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@
 
     <nav class="navigation">
       <ul class="navigation__list">
-        <li class="navigation__list-item">
+        <li class="navigation__list-item >
           <a
             class="navigation__link"
             href="/index.html"
@@ -105,6 +105,24 @@
               <path
                 d="M17 3H7c-1.1 0-2 .9-2 2v16l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z"
               />
+            </svg>
+          </a>
+        </li>
+        <li class="navigation__list-item">
+          <a
+            class="navigation__link"
+            href="/form.html"
+            aria-label="go to form page"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="24px"
+              width="24px"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M11 11V7H13V11H17V13H13V17H11V13H7V11H11ZM12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20Z"
+              ></path>
             </svg>
           </a>
         </li>
