add styling to form-page

--- a/form.html
+++ b/form.html
@@ -18,22 +18,28 @@
     <!-- Main Section -->
     <main>
       <form>
-        <label for="new-question">Your Question:</label>
-        <textarea
-          name="new-question"
-          id="new-question"
-          cols="30"
-          rows="10"
-        ></textarea>
-        <label for="new-answer">Your Question:</label>
-        <textarea
-          name="new-answer"
-          id="new-answer"
-          cols="30"
-          rows="10"
-        ></textarea>
-        <label for="tag-field">Tag:</label>
-        <input type="text" name="tag-field" id="tag-field" />
+        <div class="formfield">
+          <label for="new-question">Your Question:</label>
+          <textarea
+            name="new-question"
+            id="new-question"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </div>
+        <div class="formfield">
+          <label for="new-answer">Your Question:</h3></label>
+          <textarea
+            name="new-answer"
+            id="new-answer"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </div>
+        <div class="formfield">
+          <label for="tag-field">Tag:</label>
+          <input type="text" name="tag-field" id="tag-field" />
+        </div>
         <button type="submit">Submit</button>
       </form>
     </main>
