--- a/profile.html
+++ b/profile.html
@@ -72,7 +72,7 @@
 
     <nav class="navigation">
       <ul class="navigation__list">
-        <li class="navigation__list-item >
+        <li class="navigation__list-item">
           <a
             class="navigation__link"
             href="/index.html"
