fix bookmark-icon issue

--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@
           <label for="tag-field">Tag:</label>
           <input type="text" name="tagField" id="tag-field" />
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="submit-button">Submit</button>
       </form>
     </main>
 
