--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
     </header>
 
     <!-- Main Section -->
-    <main>
+    <main data-js="main">
       <form data-js="form">
         <div class="formfield">
           <label for="new-question">Your Question:</label>
